# Spam-whatsapp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SpamWA.py  USAGE.md  desktop.ini  pyproject.toml  setup.cfg
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
